--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "15.2.0",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "ramda": "^0.31.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
     "@types/node": "^20",
+    "@types/ramda": "^0.31.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "typescript": "^5"
